Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18577

Indexes problem on import dump SQL

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2.22, 10.3.13
    • 10.2.23, 10.3.14, 10.4.4
    • Galera
    • None
    • Linux Debian 9 (Stretch)

    Description

      Hi,

      I tested importing dump on MariaDB + Galera (2 nodes Master-Master) as follow :

      • Create a db
      • import dump sql (table in INNODB) on Node 1

      When I check some index cardinalities, I have on node 1 the right value and on node 2 null value (0) e.g :

      Node 1 : index on column username (varchar 255 utf-8) : cardinality =38250
      Node 2 : index username : cardinality = 0

      Indexes are not updated on node 2 and SQL queries on MariaDB Node 2 are too slow !

      I tested different versions :

      MariaDB 10.1.37 (Debian Stretch version) : cardinality is OK : no problem (but not same cardinality ...) !
      MariaDB 10.2.22 (Debian MariaDB repository) : cardinality is NOT ok : problem
      MariaDB 10.3.12 (Debian MariaDB repository) : cardinality is NOT ok : problem

      I run OPTIMIZE Table on Node 2 for build indexes and then indexes are managed on Node 2. Strange things too : the cardinalities are always differentes on the 2 nodes ...

      Hope, you will be able to take a look ...

      Thank's

      Eric

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            erbru Eric Brun
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2.75d
                2.75d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.